
cmake_minimum_required(VERSION 3.5)                                                                                                                                    
project(SEEEDS VERSION 1.0.0)                                                                                                                                   
                                                                                                                                                                       
add_subdirectory (seeedstoken)   